2003-10-15  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_sample_files.c:
	* daemon/opd_mangling.c:
	* daemon/opd_perfmon.c:
	* daemon/opd_util.c: check we not overflow op_nr_counters

2003-10-15  Philippe Elie  <phil.el@wanadoo.fr>

	* events/ia64/itanium/events: correct counter avalaible according
	  to intel doc.

2003-10-15  John Levon  <levon@movementarian.org>

	* dae/opd_image.c:
	* dae/opd_kernel.c:
	* dae/opd_proc.c:
	* dae/opd_sample_files.c:
	* dae/oprofiled.c:
	* daemon/opd_kernel.c:
	* daemon/opd_mangling.c:
	* daemon/opd_sfile.c:
	* daemon/opd_trans.c:
	* daemon/opd_util.c:
	* daemon/opd_util.h:
	* daemon/oprofiled.c: merge the options handling
	for dae and daemon

2003-10-15  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_perfmon.c:
	* module/ia64/op_pmu.c: bit mask for event select field is 8 bits not 7

2003-10-14  John Levon  <levon@movementarian.org>

	* configure.in:
	* m4/findkernel.m4:
	* utils/opcontrol: 2.5 refs -> 2.6

2003-10-14  John Levon  <levon@movementarian.org>

	* utils/opcontrol: merge some 2.4/6 code

2003-10-14  John Levon  <levon@movementarian.org>

	* dae/opd_image.c:
	* dae/opd_sample_files.c:
	* dae/oprofiled.c:
	* utils/opcontrol: use --events for 2.4 daemon
	too

	* daemon/opd_perfmon.c:
	* daemon/opd_mangling.c: fix counter numbering
	on !perfmon

2003-10-14  John Levon  <levon@movementarian.org>

	* configure.in: xmemdup not xmemdump

2003-10-14  John Levon  <levon@movementarian.org>

	* daemon/opd_perfmon.c: propagate a SIGTERM
	up to the parent.

2003-10-14  John Levon  <levon@movementarian.org>

	* m4/perfmon.m4:
	* configure.in: remove pfmlib checks

	* daemon/opd_util.h:
	* daemon/opd_util.c:
	* daemon/opd_mangling.c:
	* daemon/oprofiled.c: parse more detailed events
	passed on command line

	* daemon/opd_perfmon.h:
	* daemon/opd_perfmon.c: don't use libpfm at all,
	do it ourselves.

	* utils/opcontrol: pass more of the events info to
	the daemon

2003-10-14  John Levon  <levon@movementarian.org>
