@@ -14,7 +14,6 @@ for some pointers and/or read HACKING and doc/CodingStyle.
    classes on a merge failure so user can get help specifying tgid where
    relevant
  o x86_64 and 2.4 kernel: test the needed change
- o perfmon: fix signal race in opd_perfmon.c
 
 0.8 release
 -----------
