@@ -1,3 +1,9 @@
+2003-10-15  John Levon  <levon@movementarian.org>
+
+	* daemon/opd_perfmon.c: fix dumb allocation typo;
+	handle signals correctly; wait for children to
+	come up before returning
+
 2003-10-15  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* dae/opd_sample_files.c:
